peach/app/note-api/config/workload.yaml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Service
metadata:
  name: note-api
  namespace: note
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: note-api
    app.kubernetes.io/part-of: note-api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: note-api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-api
  namespace: note
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: note-api
    app.kubernetes.io/part-of: note-api
spec:
  replicas: #@ data.values.replicas
  selector:
    matchLabels:
      app: note-api
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
        github.com/revision: #@ data.values.git_revision
      labels:
        app: note-api
        app.kubernetes.io/part-of: note-api
    spec:
      containers:
      - env:
        - name: JAVA_TOOL_OPTIONS
          value: -XX:ActiveProcessorCount=2 -XX:ReservedCodeCacheSize=32M -Xss512k -Dfile.encoding="UTF-8" -Dmanagement.endpoint.health.probes.add-additional-paths="true" -Dmanagement.endpoint.health.show-details="always" -Dmanagement.endpoints.web.base-path="/actuator" -Dmanagement.endpoints.web.exposure.include="*" -Dmanagement.health.probes.enabled="true" -Dmanagement.server.port="8081" -Dserver.port="8080" -Duser.country="JP" -Duser.language="ja" -Duser.timezone="Asia/Tokyo"
        - name: BPL_JVM_THREAD_COUNT
          value: "28"
        - name: ENTRY_APIURL
          value: ${k8s.bindings.note-config.entry-api-url}
        - name: ENTRY_CLIENTID
          value: ${k8s.bindings.note-config.entry-api-client-id}
        - name: ENTRY_CLIENTSECRET
          value: ${k8s.bindings.note-config.entry-api-client-secret}
        - name: RSA_PRIVATEKEY
          value: file:/bindings/note-config/rsa-private-key.pem
        - name: RSA_PUBLICKEY
          value: file:/bindings/note-config/rsa-public-key.pem
        - name: SPRING_SENDGRID_APIKEY
          value: ${k8s.bindings.note-config.sendgrid-api-key}
        - name: MANAGEMENT_OTLP_LOGGING_ENDPOINT
          value: http://otel-collector.opentelemetry.svc.cluster.local:4318/v1/logs
        - name: MANAGEMENT_ZIPKIN_TRACING_ENDPOINT
          value: http://otel-collector.opentelemetry.svc.cluster.local:9411
        - name: MANAGEMENT_OPENTELEMETRY_RESOURCEATTRIBUTES_HOSTNAME
          value: ${HOSTNAME:}
        - name: INFO_ENV_HOSTNAME
          value: ${HOSTNAME:}
        image: #@ data.values.image
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /livez
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
        startupProbe:
          httpGet:
            path: /readyz
            port: 8080
            scheme: HTTP
          failureThreshold: 20
          periodSeconds: 5
        name: workload
        ports:
        - containerPort: 8080
          name: user-port
          protocol: TCP
        resources:
          limits:
            memory: 416Mi
          requests:
            memory: 416Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1002
          seccompProfile:
            type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: note-api
              topologyKey: kubernetes.io/hostname
            weight: 1
