peach/app/note-api/config/httproute-ik-am.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: note-api-ik-am
  namespace: note
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: note-api
    app.kubernetes.io/part-of: note-api
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  hostnames:
  - note-api-note.apps.ik.am
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - kind: Service
      name: note-api
      port: 80
