peach/app/note-api/config/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: note-api
  namespace: note
  annotations:
    kapp.k14s.io/change-group: workload
  labels:
    app: note-api
    app.kubernetes.io/part-of: note-api
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: contour
    namespace: projectcontour
  rules:
  - matches:
    - headers:
      - type: RegularExpression
        name: Host
        value: note-api\..+
    backendRefs:
    - kind: Service
      name: note-api
      port: 80
    timeouts:
      request: 180s
